--- a/src/components/SecondPost/styles.module.css
+++ b/src/components/SecondPost/styles.module.css
@@ -6,13 +6,13 @@
   grid-template-columns: 140px auto;
 }
 
-#image {
+img {
   grid-column-start: 1;
   grid-column-end: 2;
   width: 120px;
   height: 120px;
   background-color: black;
-  border: 2px solid black;
+  border: 2px solid red;
 }
 
 #desc {
@@ -35,13 +35,13 @@
     overflow: hidden;
   }
 
-  #image {
+  img {
     grid-column-start: 1;
     grid-column-end: 2;
     width: 12s0px;
     height: 120px;
     background-color: black;
-    border: 2px solid black;
+    border: 2px solid red;
   }
 
   #desc {
